--- a/Pag/game.html
+++ b/Pag/game.html
@@ -13,8 +13,7 @@
     <meta name="description"
         content="Decidimos quien sera el mejor de todos los tiempos.">
     <meta name="keywords"
-        content="Mundial Qatar 2022, Mundial, futbol, Messi, Argentina, Neymar, Ronaldo, pelota, Al-Rhila, deportes, futbol profesional, grupos, noticias Qatar, Campeones, Sedes Mundialistas, Estadios, copa del mundo">
-    <meta name="author" content="Ramiro Hagen">
+        content="juego, mejor, decición, famosos, comida, bebida, musica, artistas, 2023, acción, nuevo, libre, puntos, puntaje, original, futbol, dinero, diversion, online, casa, jugar">
     <meta name="robot" content="index,follow">
     <!-- Termina Meta SEO -->
 
@@ -83,6 +82,9 @@
                 <button class="BotonCandidatos btnContinuar" id="continuar">
                 </button>
 
+                <div id="imgFinEtapa">
+                </div>
+
             </div>
 
             <div id="card2">
@@ -120,6 +122,8 @@
 
     </section>
 
+    <!--Empieza Footer-->
+
     <footer class="footer">
         <div class="d-flex justify-content-center align-items-center">
             <a href="https://www.instagram.com/" target="_blank"><img src="../Multimedia/Principal/instagram.png" alt="" width="35px" height="35px" style="margin: 11px"></a>
@@ -131,6 +135,8 @@
         </div>
     </footer>
 
+    <!--Scripts-->
+    
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
     <script src="../js/arrays.js"></script>
     <script src="../js/main.js"></script>
