--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <meta name="description"
         content="Decidimos quien sera el mejor de todos los tiempos.">
     <meta name="keywords"
-        content="Mundial Qatar 2022, Mundial, futbol, Messi, Argentina, Neymar, Ronaldo, pelota, Al-Rhila, deportes, futbol profesional, grupos, noticias Qatar, Campeones, Sedes Mundialistas, Estadios, copa del mundo">
+        content="juego, mejor, decición, famosos, comida, bebida, musica, artistas, 2023, accion, nuevo, libre, puntos, puntaje, original, futbol, dinero, diversion, online, casa, jugar">
     <meta name="author" content="Ramiro Hagen">
     <meta name="robot" content="index,follow">
     <!-- Termina Meta SEO -->
@@ -148,16 +148,24 @@
 
     </main>
 
+    <!--Empieza Footer-->
+
     <footer class="footer">
         <div class="d-flex justify-content-center align-items-center">
-            <a href="https://www.instagram.com/" target="_blank"><img src="Multimedia/Principal/instagram.png" alt="" width="35px" height="35px" style="margin: 14px"></a>
-            <a href="https://www.youtube.com/" target="_blank"><img src="Multimedia/Principal/youtube.png" alt="" width="40px" height="43px" style="margin: 14px"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="Multimedia/Principal/instagram.png" alt="" width="35px" height="35px" style="margin: 11px"></a>
+            <a href="https://www.youtube.com/" target="_blank"><img src="Multimedia/Principal/youtube.png" alt="" width="40px" height="43px" style="margin: 11px"></a>
         </div>
         <div class="d-flex justify-content-center align-items-end">
             <h6 class="leterFooter">Todos los derechos reservados - © It´s the Best <br> Ramiro Hagen - 2023
             </h6>
         </div>
     </footer>
+
+    <!--Scripts-->
+    
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script src="../js/arrays.js"></script>
+    <script src="../js/main.js"></script>
 </body>
 
 </html>
